--- a/MVC/CIPlatform/CIPlatform/Views/Shared/_List.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Shared/_List.cshtml
@@ -79,7 +79,7 @@
                                 }
                                 else
                                 {
-                                    <div class="declinedlst">
+                                    <div class="declinedlst" style="background:none;">
                                     <button class="btn" style="color:white; font-size:17px;"></button>
                                     </div>
                                     break;
