--- a/MVC/CIPlatform/CIPlatform/Views/Home/AdminAddMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/AdminAddMission.cshtml
@@ -71,6 +71,9 @@
             border-radius: 3px;
         }
     </style>
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <link href="toastr.css" rel="stylesheet" />
 </head>
 
 
@@ -126,7 +129,7 @@
                     </a>
                 </li>
                 <li>
-                    <a asp-action="BannerManagementpage" asp-controller="Admin">
+                    <a asp-action="Admin_Banner" asp-controller="Home">
                         <i class="fa-solid fa-spinner" aria-hidden="true"></i>
                         <span class='sidebar-menu-text'>Banner Management</span>
                     </a>
@@ -135,6 +138,14 @@
         </nav>
         <!-- Page Content -->
         <div id="layout-admin">
+            @if (TempData["DataAdd"] != null)
+            {
+                <script src="~/lib/jquery/dist/jquery.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+                <script type="text/javascript">
+                    toastr.success('@TempData["DataAdd"]');
+                </script>
+            }
             <div class="header">
                 <div class="d-flex justify-content-between">
                     <div class="DateAndTime">
@@ -143,21 +154,11 @@
                         }
                         <span id="current-time">@formattedDate</span>
                     </div>
-                    
+
                     <div class="user">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                                    <img class="userimg" src="~/images/BlankProfile3.png">
-
-
-
-
-                                    <span style="margin-left:0.5rem;">User Name</span>
-
-
-                                </a>
+                                
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="#">Action</a></li>
                                     <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -381,4 +382,6 @@
     </script>
     <script src="~/js/adminMission.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+    <script src="toastr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
