--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Banner.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Banner.cshtml
@@ -2,9 +2,20 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+}
+@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
+
+@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
     Layout = null;
 }
-@model CIPlatform.Entities.Models.Admin_MTVM
+@model CIPlatform.Entities.Models.AdminBannerVM
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,7 +55,18 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link href="toastr.css" rel="stylesheet" />
 
+    <style>
 
+        .img-left {
+    
+    margin-left: 25%;
+    align-content: center;
+    margin-top: 20%;
+    height:50%;
+    width:50%;
+}
+
+    </style>
 
 </head>
 
@@ -130,7 +152,7 @@
                     toastr.success('@TempData["EditedData"]');
                 </script>
             }
-          
+
 
         }
         <div class="header">
@@ -144,7 +166,7 @@
                 <div class="user">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                           
+                            
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -157,7 +179,7 @@
             </div>
         </div>
         <div id="content-admin" class="content-admin">
-            <h1>Mission Theme</h1>
+            <h1>Banner</h1>
             <br />
 
             <hr />
@@ -181,33 +203,40 @@
                                     <h5 class="modal-title" id="exampleModalLabel">Please input below CMS Details</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
-                                <form id="cms-form" asp-action="Admin_AddMTheme" asp-controller="Home" method="post">
+                                <form id="banner-form" asp-action="Admin_AddBanner" asp-controller="Home" method="post" enctype="multipart/form-data">
                                     <div class="modal-body">
 
 
 
+
+
                                         <div>
 
-                                            <label asp-for="Title" class="form-label">Title</label>
-                                            <input asp-for="Title" id="Title" type="text" placeholder="Enter Theme" class="form-control">
-                                            <span asp-validation-for="Title" class="text-danger" style="font-size:12px;"></span>
+                                            <label  class="form-label" for="customFile">Upload Image</label>
+                                            @*<input asp-for="File" name="File" type="file" class="form-control" id="customFile" />*@
+                                             <input type="file" name="formFile" id="formFile" multiple accept="image/*" />
+                                           @* <span asp-validation-for="File" class="text-danger" style="font-size:12px;"></span>*@
 
 
                                         </div>
+                       
                                         <br />
 
                                         <div>
-                                            <label asp-for="Status" for="Status" class="form-label">Status</label>
+
+                                            <label asp-for="Text" class="form-label">Text</label>
+                                            <input asp-for="Text" id="Text" type="text" placeholder="Enter Text" class="form-control">
+                                            <span asp-validation-for="Text" class="text-danger" style="font-size:12px;"></span>
 
 
+                                        </div>
+                                         <br />
+                                        <div>
 
-                                            <select asp-for="Status" class="form-select" name="Status" id="Status">
-                                                <option selected disabled>--Select Status--</option>
-                                                <option value="1">1</option>
-                                                <option value="0">0</option>
-                                            </select>
+                                            <label asp-for="SortOrder" class="form-label">Sort Order</label>
+                                            <input asp-for="SortOrder" id="Text" type="number" placeholder="Enter Sort Order" class="form-control">
+                                            <span asp-validation-for="SortOrder" class="text-danger" style="font-size:12px;"></span>
 
-                                            <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
                                         </div>
 
@@ -232,36 +261,38 @@
                 <thead>
                     <tr>
 
-                        <th>Title</th>
-                        <th style="text-align:center;">Status</th>
+                        <th>Image</th>
+                        <th style="text-align:center;">Text</th>
+                        <th style="text-align:center;">SortOrder</th>
 
                         <th data-class-name="priority">Action</th>
                     </tr>
                 </thead>
                 @{
-                    if (ViewBag.missionTh != null)
+                    if (ViewBag.bannerlst != null)
                     {
 
 
-                        foreach (var mt in ViewBag.missionTh)
+                        foreach (var bnr in ViewBag.bannerlst)
                         {
-                            if (@mt.DeletedAt == null)
+                            if (@bnr.DeletedAt == null)
                             {
 
                                 <tr>
 
-                                    <td style="background-color:white">@mt.Title</td>
-                                    <td style="background-color:white; color: #14C506; text-align:center;">@mt.Status</td>
+                                    <td style="background-color:white">@bnr.ImageName</td>
+                                    <td style="background-color:white; color: #14C506; text-align:center;">@bnr.Text</td>
+                                    <td style="background-color:white; color: #14C506; text-align:center;">@bnr.SortOrder</td>
 
                                     <td style="background-color:white">
 
 
                                         <!-- Button trigger modal -->
-                            <button type="button" class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="CMSEditByAdmin" onclick="editMTData(@mt.MissionThemeId)">
+                            <button type="button" class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="BannerEditByAdmin" onclick="editBannerData(@bnr.BannerId)">
                                         </button>
 
 
-                                        <i type="button" onclick="deleteMTData(@mt.MissionThemeId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
+                                        <i type="button" onclick="deleteBannerData(@bnr.BannerId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
 
 
 
@@ -286,7 +317,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalMT"  tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
+<div class="modal fade" id="exampleModalMT" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -296,38 +327,54 @@
 
             <div class="modal-body">
 
-                <input type="hidden" id="MissionThemeId" asp-for="MissionThemeId" />
+                <input type="hidden" id="BannerId" asp-for="BannerId" />
 
 
+                
+                <br>
+               
+
+                            <div class="form-group">
+
+
+                               
+                               
+                                    
+                                       <div id="imgdiv" style="height:100%; width:100%;">
+                                          
+                                        </div>
+                                <br />
+                                        <input style="margin-left:15%;" type="file" style="background:none; border:none; background-color:none;" class="form-control-file" id="ImageEdit" name="profilePicture">
+                                    
+                                
+                                </div>
+
+                <br />
+
+               
+                 <br />
                 <div>
 
-                    <label asp-for="Title" class="form-label">Title</label>
-                    <input asp-for="Title" id="TitleEdit" type="text" placeholder="Enter Theme" class="form-control">
-                    <span asp-validation-for="Title" class="text-danger" style="font-size:12px;"></span>
+                    <label asp-for="Text" class="form-label">Text</label>
+                    <input asp-for="Text" id="TextEdit" type="text" placeholder="Enter Text" class="form-control">
+                    <span asp-validation-for="Text" class="text-danger" style="font-size:12px;"></span>
 
 
                 </div>
-                <br />
-
+                 <br />
                 <div>
-                    <label asp-for="Status" for="Status" class="form-label">Status</label>
 
+                    <label asp-for="SortOrder" class="form-label">Sort Order</label>
+                    <input asp-for="SortOrder" id="SortOrderEdit" type="number" placeholder="Enter Sort Order" class="form-control">
+                    <span asp-validation-for="SortOrder" class="text-danger" style="font-size:12px;"></span>
 
-
-                    <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
-                        <option selected disabled>--Select Status--</option>
-                        <option value="1">1</option>
-                        <option value="0">0</option>
-                    </select>
-
-                    <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
                 </div>
 
 
                 <div class="modal-footer">
                     <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn save-btn" onclick="saveEditedMTData()">Save</button>
+                    <button type="submit" class="btn save-btn" onclick="saveEditedBannerData()">Save</button>
 
 
                 </div>
@@ -337,11 +384,11 @@
 
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 
-    <script src="~/js/admin_mtheme.js"></script>
 
     <script src="toastr.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+    <script src="~/js/admin_banner.js"></script>
 
 
 
