--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Mission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Mission.cshtml
@@ -88,7 +88,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                 </a>
             </li>
             <li>
-                <a asp-action="BannerManagementpage" asp-controller="Admin">
+               <a asp-action="Admin_Banner" asp-controller="Home">
                     <i class="fa-solid fa-spinner" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Banner Management</span>
                 </a>
@@ -108,17 +108,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                     <div class="user">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                                    <img class="userimg" src="~/images/BlankProfile3.png">
-
-
-
-
-                                    <span style="margin-left:0.5rem;">User Name</span>
-
-
-                                </a>
+                               
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="#">Action</a></li>
                                     <li><a class="dropdown-item" href="#">Another action</a></li>
