--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_MissionSkills.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_MissionSkills.cshtml
@@ -85,7 +85,7 @@
                 </a>
             </li>
             <li>
-                <a asp-action="BannerManagementpage" asp-controller="Admin">
+                <a asp-action="Admin_Banner" asp-controller="Home">
                     <i class="fa-solid fa-spinner" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Banner Management</span>
                 </a>
@@ -105,17 +105,7 @@
                 <div class="user">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                                <img class="userimg" src="~/NewFolder~/NewFolder//user-img.png">
-
-
-
-
-                                <span style="margin-left:0.5rem;">User Name</span>
-
-
-                            </a>
+                           
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
