--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
@@ -37,13 +37,17 @@
   integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
   <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+<link href="toastr.css" rel="stylesheet" />
+
 </head>
 
 
-@if (TempData.ContainsKey("DataSavedMessage"))
+@*@if (TempData.ContainsKey("DataSavedMessage"))
 {
 <script>alert('@TempData["DataSavedMessage"]');</script>
-}
+}*@
 <div class="wrapper">
     <!-- Sidebar -->
     <nav id="sidebar" class="collapse-sidebar">
@@ -94,7 +98,7 @@
                 </a>
             </li>
             <li>
-                <a asp-action="BannerManagementpage" asp-controller="Admin">
+                <a asp-action="Admin_Banner" asp-controller="Home">
                     <i class="fa-solid fa-spinner" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Banner Management</span>
                 </a>
@@ -103,7 +107,14 @@
     </nav>
     <!-- Page Content -->
     <div id="layout-admin">
-    
+    @if (TempData["DataSaved"] != null)
+            {
+                <script src="~/lib/jquery/dist/jquery.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+                <script type="text/javascript">
+                    toastr.success('@TempData["DataSaved"]');
+                </script>
+            }
         <div class="header">
             <div class="d-flex justify-content-between">
                 <div class="DateAndTime">
@@ -115,17 +126,7 @@
                 <div class="user">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                                <img class="userimg" src="~/NewFolder~/NewFolder//user-img.png">
-
-
-
-
-                                <span style="margin-left:0.5rem;">User Name</span>
-
-
-                            </a>
+                            
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -312,7 +313,8 @@
 
 <script src="~/js/admin_skills.js"></script>
 
-
+<script src="toastr.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
 
