--- a/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
@@ -14,34 +14,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
     @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="~/css/admin_user.css" />
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-   
+
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" accesskey=""
-integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
- 
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <link href="toastr.css" rel="stylesheet" />
+
 </head>
 
 
 
 <div class="wrapper">
     <!-- Sidebar -->
-   <nav id="sidebar" class="collapse-sidebar">
+    <nav id="sidebar" class="collapse-sidebar">
         <div class="sidebar-header">
             <button type="button" id="sidebarCollapse" class="show-sidebar"><i class="fa fa-bars" aria-hidden="true"></i></button>
         </div>
@@ -89,7 +92,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                 </a>
             </li>
             <li>
-                <a asp-action="BannerManagementpage" asp-controller="Admin">
+                <a asp-action="Admin_Banner" asp-controller="Home">
                     <i class="fa-solid fa-spinner" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Banner Management</span>
                 </a>
@@ -98,6 +101,17 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
     </nav>
     <!-- Page Content -->
     <div id="layout-admin">
+        @{
+            if (TempData["DataSaved"] != null)
+            {
+            <script src="~/lib/jquery/dist/jquery.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+            <script type="text/javascript">
+                toastr.success('@TempData["DataSaved"]');
+            </script>
+            }
+        }
+
         <div class="header">
             <div class="d-flex justify-content-between">
                 <div class="DateAndTime">
@@ -109,17 +123,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                 <div class="user">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                                <img class="userimg" src="~/NewFolder~/NewFolder//user-img.png">
-
-
-
-
-                                <span style="margin-left:0.5rem;">User Name</span>
-
-
-                            </a>
+                           
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -136,8 +140,6 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
             <hr />
             <div class="firstrow">
                 <div class="col-7">
-                   
-
                 </div>
                 <div class="col-6">
 
@@ -159,7 +161,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                                 <form id="cms-form" asp-action="AddCMS" asp-controller="Home" method="post">
                                     <div class="modal-body">
 
-                                        
+
 
                                         <div>
 
@@ -186,10 +188,10 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                                         <br />
 
 
-                                         <div>
+                                        <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
 
-                                           
+
 
                                             <select asp-for="Status" class="form-select" name="Status" id="Status">
                                                 <option selected disabled>--Select Status--</option>
@@ -202,11 +204,11 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                                         </div>
 
                                     </div>
-                                
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn">Save</button>
-                                </div>
+
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                                        <button type="submit" class="btn save-btn">Save</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -216,51 +218,49 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
 
             </div>
 
-<br />
+            <br />
 
             <table style="background-color:white; width:100%;" id="table_id" class="display" data-order='[[ 1, "asc" ]]' data-page-length='25' d>
                 <thead>
                     <tr>
-                        
+
                         <th>Title</th>
-                       <th>Status</th>
-                       
+                        <th>Status</th>
+
                         <th data-class-name="priority">Action</th>
                     </tr>
                 </thead>
                 @{
-                    if(ViewBag.cmsData != null)
+                    if (ViewBag.cmsData != null)
                     {
-                        
-                    
-                    foreach (var cms in ViewBag.cmsData)
-                    {
-                        <tr>
-                        
-                            <td style="background-color:white">@cms.Title</td>
-                            <td style="background-color:white; color: #14C506;">@cms.Status</td>
-                           
-                            <td style="background-color:white">
 
 
-                             <!-- Button trigger modal -->
-                    <button type="button"  class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="CMSEditByAdmin" onclick="editCMSData(@cms.CmsPageId)">
-                        
-                     
-                    </button>
-                 
-                    
-                                <i type="button" onclick="deleteCmsData(@cms.CmsPageId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
+                        foreach (var cms in ViewBag.cmsData)
+                        {
+                            <tr>
+
+                                <td style="background-color:white">@cms.Title</td>
+                                <td style="background-color:white; color: #14C506;">@cms.Status</td>
+
+                                <td style="background-color:white">
+
+
+                                    <!-- Button trigger modal -->
+                            <button type="button" class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="CMSEditByAdmin" onclick="editCMSData(@cms.CmsPageId)">
+                                    </button>
+
+
+                                    <i type="button" onclick="deleteCmsData(@cms.CmsPageId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
 
 
 
 
-                            </td>
+                                </td>
 
-                        </tr>
+                            </tr>
+                        }
                     }
                 }
-}
 
 
             </table>
@@ -273,74 +273,76 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
 </div>
 
 
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModalCMS" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabelEdit">User Details</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCMS" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabelEdit">User Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
-                                    <div class="modal-body">
+            <div class="modal-body">
 
-                                   <input type="hidden" id="CmsPageId" asp-for="CmsPageId"/>
-
-
-                                   
-                                        <div>
-
-                                            <label asp-for="Title" class="form-label">Title</label>
-                                            <input asp-for="Title" id="TitleEdit" type="text" placeholder="Enter Title" class="form-control">
-                                            <span asp-validation-for="Title" class="text-danger" style="font-size:12px;"></span>
+                <input type="hidden" id="CmsPageId" asp-for="CmsPageId" />
 
 
-                                        </div>
-                                        <br />
-                                        <div>
-                                            <label asp-for="Description" class="form-label">Description</label>
-                                            <textarea asp-for="Description" rows=10 cols=5 id="DescriptionEdit" type="text" placeholder="Enter Description" class="form-control"></textarea>
-                                            <span asp-validation-for="Description" class="text-danger" style="font-size:12px;"></span>
-                                        </div>
-                                        <br />
 
-                                        <div>
-                                            <label asp-for="Slug" class="form-label">Slug</label>
-                                            <input asp-for="Slug" id="SlugEdit" type="text" class="form-control" placeholder="Enter slug">
-                                            <span asp-validation-for="Slug" class="text-danger" style="font-size:12px;"></span>
-                                        </div>
+                <div>
 
-                                        <br />
+                    <label asp-for="Title" class="form-label">Title</label>
+                    <input asp-for="Title" id="TitleEdit" type="text" placeholder="Enter Title" class="form-control">
+                    <span asp-validation-for="Title" class="text-danger" style="font-size:12px;"></span>
 
 
-                                       <div>
-                                            <label asp-for="Status" for="Status" class="form-label">Status</label>
+                </div>
+                <br />
+                <div>
+                    <label asp-for="Description" class="form-label">Description</label>
+                    <textarea asp-for="Description" rows=10 cols=5 id="DescriptionEdit" type="text" placeholder="Enter Description" class="form-control"></textarea>
+                    <span asp-validation-for="Description" class="text-danger" style="font-size:12px;"></span>
+                </div>
+                <br />
 
-                                           
+                <div>
+                    <label asp-for="Slug" class="form-label">Slug</label>
+                    <input asp-for="Slug" id="SlugEdit" type="text" class="form-control" placeholder="Enter slug">
+                    <span asp-validation-for="Slug" class="text-danger" style="font-size:12px;"></span>
+                </div>
 
-                                            <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
-                                                <option selected disabled>--Select Status--</option>
-                                                <option value="Active">Active</option>
-                                                <option value="In-Active">In-Active</option>
-                                            </select>
+                <br />
 
-                                            <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
-                                        </div>
-                                       
+                <div>
+                    <label asp-for="Status" for="Status" class="form-label">Status</label>
 
-                                    </div>
-                                    
-                               
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn" onclick="saveEditedDataCMS()">Save</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+
+                    <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
+                        <option selected disabled>--Select Status--</option>
+                        <option value="Active">Active</option>
+                        <option value="In-Active">In-Active</option>
+                    </select>
+
+                    <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+                </div>
+
+
+            </div>
+
+
+            <div class="modal-footer">
+                <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn save-btn" onclick="saveEditedDataCMS()">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 
 <script src="~/js/cms.js"></script>
 
+<script src="toastr.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
